fix: nginx && visible emoji in android && background gradient

--- a/src/components/Page/Page.module.sass
+++ b/src/components/Page/Page.module.sass
@@ -7,16 +7,16 @@
 
 .background
   position: absolute
-  background: linear-gradient(-45deg, #23d5b7, #3f94b5, #6651db, #983ab4, #e13074) repeat
+  background: linear-gradient(-45deg, #23d5b7, #23d5b7, #23d5b7, #23d5b7, #23d5b7, #23d5b7, #23d5b7, #3f94b5, #6651db, #983ab4, #e13074) repeat
   width: 300%
-  height: 400%
-  animation: page-gradient  30s cubic-bezier(0.42, 0, 0.58, 1) 1s infinite
+  height: 500%
+  animation: page-gradient 15s cubic-bezier(0.42, 0, 0.58, 1) 1s infinite
   z-index: -1
 
   @keyframes page-gradient
     0%
       transform: translate(0%, 0%)
     50%
-      transform: translate(-65%, -70%)
+      transform: translate(-30%, -14%)
     100%
       transform: translate(0%, 0%)
